feat: implement module Categories API, Public Catalog, Vendor Service, Vendo Profile, Service Assets API (#12)
* chore: fix compile errors and test failures in main before integration

* feat: complete work for implement_categories_module_api

* feat: complete work for implement_public_catalog_module

* feat: complete work for implement_vendor_services_module

* feat: complete work for implement_vendor_profile_module

* feat: complete work for implement_service_assets_api

* Fix tests compilation issue

* Merge implement_categories_module_api and implement_vendor_services_module

* chore(integration): fix conflicts and compile errors for service module merge

* Stop tracking .agents/ folder

* Stop tracking .agents/ folder

* fix

* fix