@@ -1,9 +1,11 @@
-package com.danasea.backend.modules.systemconfig;
+package com.danasea.backend.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.MediaType;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.web.SecurityFilterChain;
@@ -57,6 +59,9 @@ public class SecurityConfig {
 								"/swagger-ui.html",
 								"/v3/api-docs/**"
 						).permitAll()
+						.requestMatchers(HttpMethod.GET, "/api/categories", "/api/categories/**").permitAll()
+						.requestMatchers(HttpMethod.GET, "/api/services", "/api/services/**").permitAll()
+						.requestMatchers(HttpMethod.GET, "/api/recently-viewed").permitAll()
 						.requestMatchers("/api/admin/**").hasRole("ADMIN")
 						.anyRequest()
 						.authenticated())
@@ -72,8 +77,8 @@ public class SecurityConfig {
 		CorsConfiguration configuration = new CorsConfiguration();
 		configuration.setAllowedOrigins(allowedOrigins);
 		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-		configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
-		configuration.setExposedHeaders(List.of("Authorization"));
+		configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "X-Session-Id"));
+		configuration.setExposedHeaders(Arrays.asList("Authorization", "X-Session-Id"));
 		configuration.setAllowCredentials(true);
 
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
